--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git remote set-url origin git@github.com:RITHISH01/Github-Prettier.git
           git add -A
           git diff-index --quiet HEAD || git commit -m "Format code with Prettier"
           git push
